--- a/css/styles.css
+++ b/css/styles.css
@@ -378,6 +378,7 @@ img {
                 0px 1px 2px rgba(0, 0, 0, 0.08),
                 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
+    border-style: none;
 
     cursor: pointer
 }
