--- a/css/styles.css
+++ b/css/styles.css
@@ -19,15 +19,12 @@ body {
 }
 
 /*сбрасывает стили*/
-h1, h2, h3, p, ul, a {
+h1, h2, h3, p, ul {
     margin: 0;
-    padding: 0;
-    font-size: inherit;
 }
 
 /*убирает точки в списке*/
 ul {
-    margin: 0;
     padding: 0;
     list-style: none;
 }
@@ -72,18 +69,16 @@ img {
     padding: 94px 0;
 }
 
+
 /*-------------HEADER-------------- */
 
 .header {
-    padding: 32px 0;
-
     border-bottom: 1px solid #ececec;
 }
 
 .header-container {
     display: flex;
     align-items: center;
-    /*justify-content: space-between;*/
 }
 
 .header-nav {
@@ -109,6 +104,7 @@ img {
 
 .header-list {
     display: flex;
+    margin-left: auto;
 }
 
 .header-item:not(:last-child) {
@@ -116,11 +112,14 @@ img {
 }
 
 .header-link {
+    padding: 32px 0;
+
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
 
     color: var(--primary-second-text-color);
+    display: block;
 }
 
 .header-link:hover,
@@ -132,17 +131,15 @@ img {
     color: var(--accent-color);
 }
 
-.header-connect {
-    margin-left: auto;
-
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-
+.current {
+    color: #2196F3;
 }
 
 .header-tel,
 .header-mail {
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
     color: var(--main-text-color);
 }
 
@@ -160,9 +157,7 @@ img {
 }
 
 .hero-title {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-bottom: 40px;
+    margin-bottom: 40px;
 
     font-weight: 900;
     font-size: 44px;
@@ -176,7 +171,7 @@ img {
 
 .hero-btn {
     padding: 10px 32px;
-    
+   
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
@@ -185,14 +180,13 @@ img {
 
     color: var(--primary-first-text-color);
     background-color: var(--main-btn-background);
-
+    border: transparent;
+    /*box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);*/
+    border-radius: 4px;
     cursor: pointer;
 }
 
 /*---------------------DETAILS SECTION-------------------*/
-.details-container {
-    display: flex;
-}
 
 .details-title {
     margin-bottom: 10px;
@@ -214,18 +208,17 @@ img {
 
 .details-list {
     display: flex;
-    font-weight: wrap;
-    margin: -30px;
 }
 
-.details-item {
-    flex-basis: calc(100%/4 - 90px);
-    margin: 30px;
+.details-item:not(:last-child) {
+   margin-right: 30px;
 }
-
-
 
 /*----------------------DOING SECTION--------------------*/
+
+.doing-section {
+    padding-top: 0;
+}
 
 .doing-title {
     margin-bottom: 50px;
@@ -241,13 +234,12 @@ img {
 
 .doing-list {
     display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
+   /* margin-left: -30px;*/
 }
 
-.doing-item {
-    flex-basis: calc(100%/3 - 30px);
-    margin-left: 30px;
+.doing-item:not(:last-child) {
+    /*flex-basis: calc(100%/3 - 30px);*/
+    margin-right: 30px;
 }
 
 /*--------------------TEAM SECTION-----------------------*/
@@ -268,8 +260,17 @@ img {
     color:var(--primary-second-text-color);
 }
 
+.team-text-container {
+    padding: 30px 0;
+
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
 .team-second-title {
-    margin: 10px 0;
+    margin-bottom: 10px;
 
     font-weight: 500;
     font-size: 16px;
@@ -289,17 +290,16 @@ img {
 }
 
 .team-list {
-    margin-left: -30px;
-
+    /*margin-right: -30px;*/
     display: flex;
-    flex-wrap: wrap;
 }
 
-.team-item {
-    margin-left: 30px;
-
-    flex-basis: calc(100% / 4 - 30px);
+.team-item:not(:last-child) {
+    margin-right: 30px;
+    /*flex-basis: calc(100% / 4 - 30px);*/
 }
+
+
 
 /*------------------------FOUTER---------------------------*/
 
@@ -324,7 +324,6 @@ img {
 
 .footer-adress {
     margin-top: 20px;
-    margin-bottom: 9px;
     font-style: normal;
 }
 
@@ -336,6 +335,11 @@ img {
 
     color:var(--primary-first-text-color);
 }
+
+.footer-item:not(:last-child) {
+    margin-bottom: 9px;
+}
+
 
 .footer-mail,
 .footer-tel {
@@ -356,16 +360,15 @@ img {
     justify-content: center;
 
     margin-bottom: 50px;
-    margin-left: -10px;
 }
 
 .gallery-btn-item:not(:last-child) {
-    /*flex-basis: calc(100%/5 - 10px);
-    margin-left: 10px;*/
     margin-right: 8px;
 }
 
 .gallery-btn {
+    padding: 6px 22px;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
@@ -374,9 +377,7 @@ img {
 
     color: var(--primary-second-text-color);
     background: var(--primary-team-background-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-                0px 1px 2px rgba(0, 0, 0, 0.08),
-                0px 2px 2px rgba(0, 0, 0, 0.12);
+    
     border-radius: 4px;
     border-style: none;
 
@@ -387,12 +388,35 @@ img {
 .gallery-btn:focus {
     color: var(--primary-first-text-color);
     background:var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 
 }
 
+.gallery-list {
+    margin-bottom: -30px;
+    margin-right: -30px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.gallery-item {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    flex-basis: calc(100% / 3 - 30px);
+}
+
+.gallery-text-container {
+    padding: 20px 24px;
+
+    background-color:var(--main-background-color);
+    border: 1px solid #EEEEEE;
+}
+
 .gallery-title {
-    margin-top: 20px;
     margin-bottom: 8px;
+
     font-weight: 700;
     font-size: 18px;
     line-height: 2.11;
@@ -408,15 +432,6 @@ img {
     letter-spacing: 0.03em;
 }
 
-.gallery-list {
-    margin-right: -30px;
-    display: flex;
-    flex-wrap: wrap;
-}
 
-.gallery-item {
-    flex-basis: calc(100% / 3 - 30px);
-    margin-right: 30px;
-}
  
 
